css/style.css
/* ... */
.radial-gradient{
    /* Makes a radial gradient using the colors passed in the parameters in order */
    /* You can also give shape like circle and ellipse*/
    /* More number of same color can be passed to increase quantity of that color in gradient */
    background-image: radial-gradient(circle, red, red,yellow ,green,cyan ,blue);
    height: 500px;
}
.repeating-radial-gradient{
    /* Makes a repeating radial gradient using the colors passed in the parameters in order */
    /* You can also give shape like circle and ellipse*/
    /* More number of same color can be passed to increase quantity of that color in gradient. Percentage of color can also be passed */
    background-image: repeating-radial-gradient(
        circle,
          red 5%, 
          yellow 10% ,
          green 15%,
          cyan 20%,
          blue 25%
          );
    height: 500px;
}
.conical-gradient{
    /* Makes a conical gradient using the colors passed in the parameters in order */
    /* More number of same color can be passed to increase quantity of that color in gradient. Degree of colors can also be passed */
    background-image: conic-gradient(
          red 0deg,
          yellow 90deg ,
          green 180deg,
          cyan 270deg,
          blue 360deg
          );
    height: 500px;
}

.transition{
    height: 100px;
    width: 200px;
    color: white;
    background-color: black;
    transition: height 2s, width 2s, color 2s;/* Tells what needs to be transitioned and with how much time. Anything that changes and is not in transition will change instantly */
    transition-timing-function: ease-out;/* Seems about same for small time period */
    transition-delay: 1s;/* Delay between transtion activating */
}
.transition:hover{
    height: 250px;
    width:500px;
    color: black;
    background-color: white;
}

.animate{
    width: 100px;
    height: 100px;
    background-color: red;
    animation-name: animate;/* Calling the animation */
    animation-duration: 1s;/* Naked eye can't see animation in 0s but it happens. that's why we have to set the animation-duration */
    animation-delay: 1s;/* Delay for starting animation */
    position: relative;/* To make it change position. Will be taught later */
    animation-iteration-count: 1;/* Tells the no. of times of execution of animation */
    animation-direction: alternate-reverse;/* Sets the direction of the animation */
    animation-fill-mode: both; /* Backwards changes the color to 0% color before start, while Forwards changes the color to 100% color after end. Both applies both property */

    /* animation: name duration timing-function delay iteration-count direction fill-mode; This is also a shortcut to do the same as above */
}
.linear{
    animation-timing-function: linear;
}
.ease{
    animation-timing-function: ease;
}
.ease-in{
    animation-timing-function: ease-in;
}
.ease-out{
    animation-timing-function: ease-out;
}
.ease-in-out{
    animation-timing-function: ease-in-out;
}
@keyframes animate {
    /* Defining the animation. Its like a function. You have to call the function */

    /* from { background-color: blue;}
    to { background-color: yellow;} */

    0% {
        background-color: blue;
        top: 0px;
        left: 0px;
    }
    25% {
        background-color: yellow;
        top: 0px;
        left: 200px;
    }
    50% {
        background-color: black;
        top: 200px;
        left: 200px;
    }
    75% {
        background-color: aqua;
        top: 200px;
        left: 0;
    }
    100% {
        background-color: violet;
        top: 0px;
        left: 0px;
    }
}


/* DATE: 28 Jan 23 */

.media-query{
    height: 100px;
    text-align: center;
    font-size: 24px;
    background-color: red;
}
.media-query::after{
    content: "4th Screen";
}
@media (min-width: 768px) and (max-width:1000px){
    .media-query{
        background-color: white;
    }
    .media-query::after{
        content: "3rd Screen";
    }
}
@media (400px <= width <= 768px){
    /* Same as (min-width: 400px) and (max-width:768px) */
    .media-query{
        background-color: yellowgreen;
    }
    .media-query::after{
        content: "2nd Screen";
    }
}
@media (max-width:400px){
    .media-query{
        background-color: yellow;
    }
    .media-query::after{
        content: "1st Screen";
    }
}

.media-query-screens{
    height: 100px;
    text-align: center;
    font-size: 24px;
}
@media (width <= 600px){
    /* Extra small devices (phones, 600px and down) */
    .media-query-screens{
        background-color: red;
    }
    .media-query-screens::after{
        content: "Phones"
    }
}
@media (600px <= width <= 768px){
    /* Small devices (Portrait Tablets and Large Phones, 600px - 768px) */
    .media-query-screens{
        background-color: aquamarine;
    }
    .media-query-screens::after{
        content: "Portrait tablets and Large Phones";
    }
}
@media (768px <= width <= 992px){
    /* Medium devices (Landscape Tablets, 768px - 992px) */
    .media-query-screens{
        background-color: blue;
    }
    .media-query-screens::after{
        content: "Landscape Tablets";
    }
}
@media (992px <= width <= 1200px){
    /* Small devices (Laptops/Desktops, 992px - 1200px) */
    .media-query-screens{
        background-color: yellowgreen;
    }
    .media-query-screens::after{
        content: "Laptops/Desktops";
    }
}
@media (1200px <= width){
    /* Small devices (Large Laptops and Desktops, 1200px and up) */
    .media-query-screens{
        background-color: violet;
    }
    .media-query-screens::after{
        content: "Large Laptops and Desktops";
    }
}

